# AI_solo_coder_task_B_088

./: README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/config/: acoustic_config.json  sti_weights.json
backend/src/: acoustic_pool.rs  acoustic_simulator.rs  acoustics.rs  alarm_mqtt.rs  alerts.rs  clarity_analyzer.rs  design_comparator.rs  dtu_receiver.rs  era_comparator.rs  main.rs  models.rs  noise_simulator.rs  routes.rs  sti.rs  storage.rs  vr_echo_wall.rs
backend/tests/: integration_tests.rs
frontend/: index.html
frontend/js/: acoustic_panel.js  buildings_3d.js  design_comparator_panel.js  era_comparator_panel.js  feature_panels.js  noise_simulator_panel.js  shared_utils.js  temple_of_heaven_3d.js  vr_echo_wall_panel.js
mosquitto/: mosquitto.conf
nginx/: default.conf
scripts/: Dockerfile  requirements.txt  tiantan_simulator.py
sql/: init_clickhouse.sql
tests/: frontend_tests.html  test_new_features.py
