[package]
name = "tiantan-acoustics-backend"
version = "1.0.0"
edition = "2021"
description = "天坛回音壁声学仿真与语音清晰度分析系统后端"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clickhouse = "0.11"
clickhouse-rs = { version = "2", features = ["default", "tls"] }
rumqttc = { version = "0.23", features = ["async"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rand_distr = "0.4"
nalgebra = "0.32"
num-complex = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
dasp = { version = "0.11", features = ["signal"] }
byteorder = "1"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
